Address remaining SpotBugs findings